Updates from Overleaf

--- a/Notes/Week_3_Notes.tex
+++ b/Notes/Week_3_Notes.tex
@@ -1043,16 +1043,22 @@ By Existential Generalization, $\exists x$$\forall y$, $ (x\leq y^2))$.\\
 
 Analyze the truth of the following sentence.\\
 
-"If this proposition is true, then $Q$"\\
+"If this proposition is true, then pigs can fly"\\
 \begin{proof}
-$P:=$"If this proposition is true, then $Q$"\\
-
+$P:=$"If this proposition is true, then then pigs can fly"\\
+$Q:=$"pigs can fly"\\
+$P:=P\to Q$
+If $P$ then by modus ponens, $Q$. this is absurd so $P$ is false. Since P is false, $P\to Q$ is True, $P$ shares a truth value with $P\to Q$, so $P$ is True, therefore $Q$.
 \end{proof}
 
+\newpage
+\subsection{}
+\begin{exmp}
+Show by way of contradiction that if $n$ is odd that $n^2$ is 
+\begin{align}
 
-
-
-
+\end{align}
+\end{exmp}
 
 \end{exmp}
 
