--- a/project1_practice.tex
+++ b/project1_practice.tex
@@ -206,37 +206,41 @@
 
 
 \begin{enumerate}
-\item (30 points)
-  Construct truth tables for the following compound propositions.
+\item
+  For the following compound propositions, what would be the correct last column of a truth table. In class, we structured it in the way that it is the column all the way to the right (meaning the full compound proposition). 
   \begin{enumerate}
-    \item $\lnot p \to q$
-  \item $\bigl((p \to r) \land r \bigr) \lor \lnot (\lnot p \lor r)$
-  \item $\bigl((p \leftrightarrow r) \lxor q\bigr) \land (\lnot p \lor q \lor \lnot r)$
-  \item $\lnot\Bigl( \bigl((\lnot p \lor r \lor q) \land (p \to r)\bigr) \lxor r\Bigr)$
+    \item $p \to q$
+    \item $(p\leftrightarrow \lnot q) \leftrightarrow q$
   \end{enumerate}
-  Are any of the propositions equivalent? If so, which ones and why?
+ 
 
  
-(Solution) %The code for the tables is provided here. Please enter the correct truth Values into the table. Feel free to change the tables.
 \begin{enumerate}
-\item $\lnot p \to q$
+\item a) 
+\item b) 
+\end{enumerate}
+\item What is the converse of the following statement?
 
-\begin{center}
-\begin{tabular}{ | c | c | c |} 
-  \hline
- $p$ $q$ & $ \lnot p$ & $\lnot p \to r$ \\
- \hline
-  T T & ? & ? \\ 
-  T F & ? & ? \\ 
-  F T & ? & ? \\
-  F F & ? & ? \\
-  \hline
-\end{tabular}
-\end{center}
+"If $n$ is divisible by 6, then $n$ is divisible by 2."
 
 
+\item Prove that the following equivalence is true or provide an assignment which shows that it is false.
 
-\item Truth Table for $\bigl((p \to r) \land r \bigr) \lor \lnot (\lnot p \lor r)$
+\[\lnot(p\to q) \equiv \lnotp \to \lnot q \]
+
+\item Write the following proposition in conjunctive normal form, AKA use equivalences to find an equivalent proposition which is in conjunctive normal form. 
+\begin{align}
+(\lnot p\land q) \lor (\lnot p \land q) \lor (p \land q)\equiv&
+\end{align}
+
+\item Write the following proposition in disjunctive normal form, AKA use equivalences to find an equivalent proposition which is in conjunctive normal form.
+\begin{align}
+(\lnot p \lor q) \land ( p \lor \lnot q) \land (\lnot p \lor \lnot q )\equiv&
+\end{align}
+
+
+
+
 %
 \begin{center}
 \begin{tabular}{ | c | c | c | c | c | c | c |} 
